Missing change from 5d7b31da0b15fe170050baa3c644f1c92e15db22

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="name_cannot_be_blank">Name cannot be blank.</string>
     <string name="password_cannot_be_blank">Password cannot be blank.</string>
     <string name="password_min_length">Password should have at least 8 characters.</string>
+    <string name="prefs_current_user">io.msgapp.android.prefs.CURRENT_USER</string>
 </resources>
